<?xml version="1.0"?>
<package format="2">
  <name>lidar_replay</name>
  <version>0.0.0</version>
  <description>The lidar_replay package</description>
  <maintainer email="robotics@mov.ai">MOV.AI</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ouster_ros</depend>
  <depend>velodyne_pointcloud</depend>
  <export>
  </export>
</package>
